--- a/css/login.css
+++ b/css/login.css
@@ -3,15 +3,17 @@ body{
 	margin: 0;
 	padding: 0;
 	font-family: sans-serif;
+	background: url(land.jpg) no-repeat;
+	background-size: cover;
 }
 
 .loginbox{
 	width: 280px;
 	position: absolute;
-	top: 40%;
-	left: 30%;
+	top: 50%;
+	left: 50%;
 	color: white;
-	transform: translate(-30%, -30%);
+	transform: translate(-50%, -50%);
 }
 
 .loginbox h1{
